--- a/iprwc-frontend/src/app/app.component.html
+++ b/iprwc-frontend/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<div class="site-wrapper">
+  <app-navbar></app-navbar>
+  <router-outlet></router-outlet>
+</div>
