--- a/iprwc-frontend/src/styles.scss
+++ b/iprwc-frontend/src/styles.scss
@@ -1,5 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
 
+:root {
+  --twisted-green: #808F11;
+  --white: #ffffff;
+  --black: #000000;
+  --brown: #382418;
+  --background: #473E32;
+  --background-light: #5A5245;
+  --text-highlight: #FF981F;
+}
+
+@font-face {
+  font-family: 'RuneScape Chat';
+  src: url('/assets/runescape_chat_font.ttf');;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -7,7 +22,46 @@
 }
 
 body {
-  background-image: url('/assets/background.png');
-  background-size: contain;
-  height: 100vh;
+  font-family: 'RuneScape Chat', sans-serif;
+  background-color: var(--black);
 }
+
+a {
+  text-decoration: none;
+  color: var(--twisted-green);
+}
+
+.text-highlight {
+  color: var(--text-highlight);
+  text-shadow: 1px 1px 0 var(--black);
+}
+
+.content {
+  margin-top: 30px;
+  background-size: cover;
+  background-image: url('/assets/scroll_middle.gif');
+
+  &::before, &::after {
+    width: 100%;
+    height: 50px;
+    display: block;
+    content: '';
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+  
+  &::before {
+    background-image: url('/assets/scroll_top.gif');
+    transform: translateY(-25%) scale(103%);
+  }
+
+  &::after {
+    background-image: url('/assets/scroll_top.gif');
+    transform: translateY(25%) scale(103%) rotate(180deg);
+  }
+
+  .content-inner {
+    padding: 12px;
+  }
+}
+
