--- a/iprwc-frontend/src/app/pages/profile/profile.component.html
+++ b/iprwc-frontend/src/app/pages/profile/profile.component.html
@@ -1,1 +1,6 @@
-<p>profile works!</p>
+<div class="profile">
+    <div class="name text-highlight">
+        <p>profile works!</p>
+    </div>
+</div>
+
