Admin section done, Modals implemented, Application connected to backend.

--- a/iprwc-frontend/src/app/components/navbar/navbar.component.html
+++ b/iprwc-frontend/src/app/components/navbar/navbar.component.html
@@ -3,6 +3,7 @@
     <li><a routerLink="/">Twisted Exchange</a></li>
     <li>
       <ul class="nav-links">
+        <li><a routerLink="/admin">Admin</a></li>
         <li><a routerLink="/products">Products</a></li>
         <li><a routerLink="/profile">Profile</a></li>
         <li><a routerLink="/cart">Cart</a></li>
