--- a/iprwc-frontend/src/app/pages/home/home.component.html
+++ b/iprwc-frontend/src/app/pages/home/home.component.html
@@ -1,22 +1,34 @@
 <div class="header">
-  <button>
+  <button (click)="onLoginClick()">
     Member? 
     <div></div>
     Play Now!
   </button>
-
   <img class="logo" src="/assets/twisted_exchange.png" alt="">
 
-  <button>
+  <button (click)="onRegisterClick()">
     New User? 
     <div></div>
     Sign Up Here
   </button>
 </div>
 
+<ng-container *ngIf="modalLogIn == true">
+  <app-modal [open]="modalOpen" (closeModalEvent)="modalOpen = false;">
+    <app-login-screen (submitted)= "modalOpen = false;"> </app-login-screen>
+  </app-modal>
+</ng-container>
+
+<ng-container *ngIf="modalRegister == true">
+  <app-modal [open]="modalOpen" (closeModalEvent)="modalOpen = false;">
+    <app-register-screen (submitted)= "modalOpen = false;"> </app-register-screen>
+  </app-modal>
+</ng-container>
+
 <div class="content">
   <div class="content-inner">
-    waddup
+  <h1>Welcome to the Runescape Twisted Exchange!</h1>
+    <p>This is a place where you can buy items for your Runescape account.</p> 
   </div>
 </div>
 
