--- a/iprwc-frontend/src/app/pages/admin/customize-profile/add-profile/add-profile.component.scss
+++ b/iprwc-frontend/src/app/pages/admin/customize-profile/add-profile/add-profile.component.scss
@@ -26,3 +26,10 @@ button {
   button {
     grid-column: span 2;
   }
+
+  .error {
+    color: red;
+    text-align: center;
+    padding: 5px;
+    grid-column: span 2;
+  }
