Delete profile fixed

--- a/frontend/src/app/pages/admin/customize-profile/customize-profile.component.html
+++ b/frontend/src/app/pages/admin/customize-profile/customize-profile.component.html
@@ -16,8 +16,8 @@
           <td>{{ webshopUser.email }}</td>
           <td>{{ webshopUser.role }}</td>
           <td>
-            <button (click)="onEditClick(webshopUser)" type="button">Edit</button>
-            <button type="button">Delete</button>
+            <button (click)="onEditClick(user)" type="button">Edit</button>
+            <button (click)="onDeleteClick(user)" type="button">Delete</button>
           </td>
         </tr>
       </tbody>
