--- a/frontend/src/app/pages/admin/customize-product/customize-product.component.html
+++ b/frontend/src/app/pages/admin/customize-product/customize-product.component.html
@@ -13,7 +13,7 @@
           <th>{{ product.id }}</th>
           <td>{{ product.name }}</td>
           <td>{{ product.price }}</td>
-          <td>
+          <td class="buttons">
             <button (click)="onEditClick(product)" type="button">Edit</button>
             <button (click)="onDeleteClick(product)" type="button">Delete</button>
           </td>
