--- a/frontend/src/app/pages/admin/customize-profile/customize-profile.component.html
+++ b/frontend/src/app/pages/admin/customize-profile/customize-profile.component.html
@@ -15,7 +15,7 @@
           <td>{{ webshopUser.username }}</td>
           <td>{{ webshopUser.email }}</td>
           <td>{{ webshopUser.role }}</td>
-          <td>
+          <td class="buttons">
             <button (click)="onEditClick(user)" type="button">Edit</button>
             <button (click)="onDeleteClick(user)" type="button">Delete</button>
           </td>
