--- a/frontend/src/app/pages/admin/admin.component.html
+++ b/frontend/src/app/pages/admin/admin.component.html
@@ -1,10 +1,10 @@
 <div class="header">
-    <a routerLink="/customizeProducts">
+    <a routerLink="/admin/products">
     <button>
         Products
     </button>
     </a>
-    <a routerLink="/customizeProfiles">
+    <a routerLink="/admin/profiles">
     <button>
         Profiles
     </button>
