--- a/frontend/src/app/pages/admin/customize-product/customize-product.component.scss
+++ b/frontend/src/app/pages/admin/customize-product/customize-product.component.scss
@@ -14,4 +14,13 @@ button {
     div {
       margin: 6px 0;
     }
-  }
+}
+
+.buttons {
+  display: flex;
+  justify-content: flex-end;
+}
+
+table + button {
+  margin-top: 12px;
+}
