--- a/frontend/src/app/pages/products/products.component.scss
+++ b/frontend/src/app/pages/products/products.component.scss
@@ -4,3 +4,15 @@
   grid-template-columns: 1fr 1fr 1fr;
   gap: 12px;
 }
+
+@media (max-width: 800px) {
+  .products {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media (max-width: 500px) {
+  .products {
+    grid-template-columns: 1fr;
+  }
+}
